<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".Nuclides" >

            <Button
                android:id="@+id/btn_elements"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickElements"
                android:text="@string/elements" />

            <Button
                android:id="@+id/btn_elementsbyweight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickElementsByWeight"
                android:text="@string/elementsbyweight" />

            <Button
                android:id="@+id/btn_information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickInformation"
                android:text="@string/information" />

            <TextView
                android:id="@+id/txt_nuclidedata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuclidedata" />

            <TextView
                android:id="@+id/txt_nuclidenatdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuclidenatdata" />

            <TextView
                android:id="@+id/txt_nuclideisodata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuclideisodata" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>